[gd_scene load_steps=8 format=3 uid="uid://bmdni3myir7gt"]

[ext_resource type="Script" path="res://Scenes/Menu/MenuButton.gd" id="1_j2kmd"]
[ext_resource type="Texture2D" uid="uid://d0gexdkmu6mv8" path="res://Scenes/Menu/MenuButtons/gear.PNG" id="2_nbsti"]

[sub_resource type="Animation" id="Animation_ipmry"]
resource_name = "scale_down"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Option:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 4.59479),
"update": 0,
"values": [Vector2(2.5, 2.5), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_sbxfn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Option:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_3o2l4"]
resource_name = "scale_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Option:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 4.43828),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.5, 2.5)]
}

[sub_resource type="Animation" id="Animation_qv1lk"]
resource_name = "pulse"
length = 1.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Option:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(4.43828, 4.28709, 4.43828),
"update": 0,
"values": [Vector2(2.5, 2.5), Vector2(2.3, 2.3), Vector2(2.5, 2.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_twg0f"]
_data = {
"RESET": SubResource("Animation_sbxfn"),
"pulse": SubResource("Animation_qv1lk"),
"scale_down": SubResource("Animation_ipmry"),
"scale_up": SubResource("Animation_3o2l4")
}

[node name="MenuButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j2kmd")
icon = ExtResource("2_nbsti")
activeColor = Color(0.582666, 0.429303, 1, 1)

[node name="Option" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 3364.0
offset_top = 735.0
offset_right = 3480.0
offset_bottom = 851.0
rotation = 0.785397
scale = Vector2(2, 2)
pivot_offset = Vector2(58.6459, 60.425)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Option"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_twg0f")
}

[node name="C1" type="Control" parent="Option"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Option"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.231711, 0.195169, 0.445008, 1)

[node name="TextureRect" type="TextureRect" parent="Option"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_nbsti")
expand_mode = 2
stretch_mode = 4

[connection signal="gui_input" from="Option/C1" to="." method="_on_c_1_gui_input"]
[connection signal="mouse_entered" from="Option/C1" to="." method="_on_c_1_mouse_entered"]
[connection signal="mouse_exited" from="Option/C1" to="." method="_on_c_1_mouse_exited"]
